exports[`SerialPortSelector should render empty list while loading 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <Dropdown
      id="serial-port-selector"
      onToggle={[Function]}
      open={true}>
      <DropdownToggle
        className="serial-port-selector btn-primary btn-nordic"
        title="Select serial port" />
      <DropdownMenu
        className="dropdown-menu-nordic"
        id="serial-port-selector-list" />
    </Dropdown>
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`SerialPortSelector should render empty port list, expanded 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <Dropdown
      id="serial-port-selector"
      onToggle={[Function]}
      open={true}>
      <DropdownToggle
        className="serial-port-selector btn-primary btn-nordic"
        title="Select serial port" />
      <DropdownMenu
        className="dropdown-menu-nordic"
        id="serial-port-selector-list" />
    </Dropdown>
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`SerialPortSelector should render empty port list, not expanded 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <Dropdown
      id="serial-port-selector"
      onToggle={[Function]}
      open={false}>
      <DropdownToggle
        className="serial-port-selector btn-primary btn-nordic"
        title="Select serial port" />
      <DropdownMenu
        className="dropdown-menu-nordic"
        id="serial-port-selector-list" />
    </Dropdown>
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`SerialPortSelector should render two ports 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <Dropdown
      id="serial-port-selector"
      onToggle={[Function]}
      open={true}>
      <DropdownToggle
        className="serial-port-selector btn-primary btn-nordic"
        title="Select serial port" />
      <DropdownMenu
        className="dropdown-menu-nordic"
        id="serial-port-selector-list">
        <MenuItem
          className="btn-primary"
          eventKey="/dev/tty0"
          onSelect={[Function]}>
          <div>
            /dev/tty0
          </div>
          <div
            style={
              Object {
                "fontSize": "small",
              }
            }>
            123456
          </div>
        </MenuItem>
        <MenuItem
          className="btn-primary"
          eventKey="/dev/tty1"
          onSelect={[Function]}>
          <div>
            /dev/tty1
          </div>
          <div
            style={
              Object {
                "fontSize": "small",
              }
            }>
            456789
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`SerialPortSelector should render two ports, one selected 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <Dropdown
      id="serial-port-selector"
      onToggle={[Function]}
      open={true}>
      <DropdownToggle
        className="serial-port-selector btn-primary btn-nordic"
        title="/dev/tty1" />
      <DropdownMenu
        className="dropdown-menu-nordic"
        id="serial-port-selector-list">
        <MenuItem
          className="btn-primary"
          eventKey="/dev/tty0"
          onSelect={[Function]}>
          <div>
            /dev/tty0
          </div>
          <div
            style={
              Object {
                "fontSize": "small",
              }
            }>
            123456
          </div>
        </MenuItem>
        <MenuItem
          className="btn-primary"
          eventKey="/dev/tty1"
          onSelect={[Function]}>
          <div>
            /dev/tty1
          </div>
          <div
            style={
              Object {
                "fontSize": "small",
              }
            }>
            456789
          </div>
        </MenuItem>
        <MenuItem
          className="btn-primary"
          eventKey="Close serial port"
          onSelect={[Function]}>
          <div>
            Close serial port
          </div>
          <div
            style={
              Object {
                "fontSize": "small",
              }
            }>
            
          </div>
        </MenuItem>
      </DropdownMenu>
    </Dropdown>
    <div
      className="indicator off" />
  </div>
</span>
`;
